Update to appropriate repo.

--- a/examples/build_devops_package/workflowvariables.cfg
+++ b/examples/build_devops_package/workflowvariables.cfg
@@ -2,6 +2,6 @@
 distributionRootDirectory = dist.test
 sourceDistributionDirectory = dist.test\DevOps
 localGitRepo = dist.test
-remoteGitRepo = ssh://czacny@cargo.dreamhost.com/~/development.git
+remoteGitRepo = https://github.com/chriszacny/DevOps.git
 pythonLocation = C:\python.33.dev\Scripts\python.exe
 
