Pulled styling values out to appsettings.cfg files.

--- a/devops/workflow/appsettings.cfg
+++ b/devops/workflow/appsettings.cfg
@@ -1,5 +1,18 @@
 [Default]
 logDirectory = c:\temp\log
 
+[ConsoleOutput]
+indentation = "     "
+workflowTaskErrorStyle = colorama.Back.RED + colorama.Fore.WHITE
+devOpsTaskHeaderStyle = colorama.Fore.WHITE + colorama.Style.DIM
+devOpsTaskFooterStyle = colorama.Fore.WHITE
+devOpsTaskTextStyle = colorama.Fore.GREEN + colorama.Style.DIM
+controlFlowTaskHeaderStyle = colorama.Fore.YELLOW + colorama.Style.DIM
+controlFlowTaskFooterStyle = colorama.Fore.YELLOW
+controlFlowTaskTextStyle = colorama.Fore.YELLOW + colorama.Style.DIM
+sequenceHeaderStyle = colorama.Back.BLUE + colorama.Fore.CYAN
+sequenceFooterStyle = colorama.Back.BLUE + colorama.Fore.CYAN
+sequenceTextStyle = colorama.Fore.CYAN + colorama.Style.DIM
+
 [SourceControl]
 git = C:\Program Files (x86)\Git\bin\git.exe
