--- a/examples/build_devops_package/workflowvariables.cfg
+++ b/examples/build_devops_package/workflowvariables.cfg
@@ -1,6 +1,6 @@
 [Default]
 distributionRootDirectory = dist.test
-sourceDistributionDirectory = dist.test\DevOps
+sourceDistributionDirectory = dist.test
 localGitRepo = dist.test
 remoteGitRepo = https://github.com/chriszacny/DevOps.git
 pythonLocation = C:\python.33.dev\Scripts\python.exe
